tests/data/ValidCase/src/Context/Application/ValidQuery.php
<?php declare(strict_types=1);

namespace Tests\ValidCase\Context\Application;

final class ValidQuery implements \Mage\Bus\Query {}
