tests/Data/InvalidTypeCase/src/Context/Application/InvalidQuery.php
<?php declare(strict_types=1);

namespace Tests\InvalidTypeCase\Context\Application;

final class InvalidQuery implements \Mage\Bus\Contracts\Query\Query {}
